logOutput-pingpong/manifests/service_pingPong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2346 # Listens to this port, I think.
      protocol: TCP
      targetPort: 5001 # Sends all traffic to this port, I think.
