logOutput-pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  namespace: exercises
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutput-svc
                port:
                  number: 2345 # Sends all traffic to "/" to this port. The port to access the Ingress is the same as the port to acess the load balancer, I guess?
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 2346
